# practice-deutsch

./: .gitignore  Cargo.toml  README.md  build.sh  nouns.csv  phrases.csv  verbs.csv
audio/phrases/: phrases.csv
src/: audio.rs  main.rs  nouns.rs  types.rs
src/resources/: skip_nouns_from_collins_dictionary.csv  skip_nouns_from_verbformen.csv
src/types/: alphabet.rs  audio.rs  cla.rs  download.rs  nouns.rs  numbers.rs  phrases.rs  utils.rs  verbs.rs  web.rs
