[package]
name = "practice-deutsch"
version = "1.0.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.193", features = ["derive"] }
rand = "0.8.5"
rodio = "0.17.3"
reqwest = { version = "0.11.23", features = ["blocking"] }
bytes = "1.5.0"
clap = { version = "4.4.11", features = ["derive"] }
thirtyfour_sync = "0.27.1"
