[package]
name = "practice-deutsch"
version = "1.0.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
rand = "0.8.5"
rodio = "0.17.3"
reqwest = { version = "0.12.1", features = ["blocking", "cookies", "gzip"] }
scraper = "0.19.0"
bytes = "1.6.0"
clap = { version = "4.5.3", features = ["derive"] }
thirtyfour_sync = "0.27.1"
base64 = "0.22.0"
valid = "0.3.1"
colored = "2.1.0"
